--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "express-winston": "^4.2.0",
     "mongoose": "^6.3.5",
     "multer": "^1.4.5-lts.1",
-    "winston": "^3.7.2"
+    "winston": "^3.7.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
