--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   },
+  "engines": {
+    "node": "^14.18.2",
+    "npm": "^8.10.0"
+  },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
