--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pt",
   "version": "1.0.1",
   "description": "",
-  "main": "index.ts",
+  "main": "./src/index.ts",
   "scripts": {
     "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
